# BonBoExtend

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
bonbo-agent/: Cargo.toml
bonbo-agent/src/: config.rs  decision_loop.rs  kill_switch.rs  lib.rs  mcp_client.rs  mock_mcp.rs  orchestrator.rs  order_executor.rs  risk_gate.rs  state_machine.rs
bonbo-agent/tests/: decision_loop_integration.rs
bonbo-binance-futures/: Cargo.toml
bonbo-binance-futures/examples/: trade_cancel_and_buy.rs
bonbo-binance-futures/src/: auth.rs  lib.rs  models.rs  rate_limiter.rs
bonbo-binance-futures/src/rest/: account.rs  algo_orders.rs  market.rs  mod.rs  orders.rs
bonbo-binance-futures/src/websocket/: market_stream.rs  mod.rs  reconnect.rs  user_stream.rs
bonbo-binance-futures/tests/: websocket_integration.rs
bonbo-data/: Cargo.toml
bonbo-data/src/: cache.rs  fetcher.rs  lib.rs  models.rs  websocket.rs
bonbo-executor/: Cargo.toml
bonbo-executor/src/: async_dispatcher.rs  dry_run.rs  execution_algo.rs  execution_errors.rs  flash_limit.rs  idempotency.rs  is.rs  lib.rs  market_impact.rs  ofi.rs  optimal_slicer.rs  order_builder.rs  orderbook.rs  pov.rs  risk_guards.rs  saga.rs  smart_execution.rs  smart_market.rs  twap.rs  utils.rs  vwap.rs
bonbo-extend/: Cargo.toml
bonbo-extend-mcp/: Cargo.toml
bonbo-extend-mcp/src/: main.rs
bonbo-extend/examples/: advanced_scan.rs  btc_analysis.rs  dotusdt_analysis.rs  dotusdt_macd_entry.rs  dotusdt_macd_vs_backtest.rs  market_scan.rs  xau_full_analysis.rs
bonbo-extend/src/: error.rs  lib.rs  plugin.rs  registry.rs
bonbo-extend/src/integration/: mod.rs
bonbo-extend/src/services/: health_check.rs  mod.rs  price_watcher.rs  system_health.rs
bonbo-extend/src/tools/: backtest.rs  journal.rs  learning.rs  market_data.rs  mod.rs  portfolio.rs  price_alert.rs  regime.rs  risk.rs  scanner.rs  sentinel.rs  system_monitor.rs  technical_analysis.rs  trading.rs  validation.rs
bonbo-funding/: Cargo.toml
bonbo-funding/src/: fetcher.rs  lib.rs  tracker.rs
bonbo-journal/: Cargo.toml
bonbo-journal/src/: error.rs  journal.rs  lib.rs  models.rs  performance.rs
bonbo-learning/: Cargo.toml
bonbo-learning/src/: dma.rs  error.rs  lib.rs  models.rs  overfitting.rs  weights.rs
bonbo-position-manager/: Cargo.toml
bonbo-position-manager/src/: lib.rs  liquidation.rs  orphan_cleanup.rs  partial_close.rs  tracker.rs  trailing_stop.rs
bonbo-quant/: Cargo.toml
bonbo-quant/src/: advanced_strategies.rs  engine.rs  lib.rs  models.rs  report.rs  strategies.rs  strategy.rs
bonbo-regime/: Cargo.toml
bonbo-regime/src/: bocpd.rs  classifier.rs  error.rs  lib.rs  models.rs  mtf_guard.rs
bonbo-risk/: Cargo.toml
bonbo-risk/benches/: risk_metrics.rs
bonbo-risk/examples/: risk_management.rs
bonbo-risk/src/: circuit_breaker.rs  lib.rs  models.rs  position_sizing.rs  var.rs
bonbo-scanner/: Cargo.toml
bonbo-scanner/src/: error.rs  lib.rs  models.rs  scanner.rs  scheduler.rs
bonbo-sentinel/: Cargo.toml
bonbo-sentinel/src/: composite.rs  fear_greed.rs  glassnode.rs  lib.rs  models.rs  whale_alerts.rs
bonbo-ta/: Cargo.toml
bonbo-ta/benches/: indicators.rs
bonbo-ta/examples/: ta_indicators.rs
bonbo-ta/src/: batch.rs  error.rs  lib.rs  models.rs
bonbo-ta/src/indicators/: alma.rs  ehlers.rs  hurst.rs  mod.rs  moving_averages.rs  oscillators.rs  trend.rs  volatility.rs  volume.rs
bonbo-validation/: Cargo.toml
bonbo-validation/src/: cpcv.rs  error.rs  lib.rs  models.rs  report.rs  walk_forward.rs
config/: extend.toml  trading.toml
docs/: ARBUSDT_RESEARCH.md  ARCHITECTURE.md  FINANCIAL_HACKER_RESEARCH.md  PROJECT_README.md  QUANT_ARCHITECTURE.md  RESEARCH_PLAN_V2.md  SEARCH_API_RESEARCH.md  SELF_LEARNING_PLAN.md  SYSTEM_OVERVIEW.md  SYSTEM_OVERVIEW_V2.md  TRADINGVIEW_STRATEGIES_RESEARCH.md  TRADING_ALGORITHMS_RESEARCH.md  UPGRADE_GUIDE.md  USAGE.md  USER_GUIDE.md  activity.md  phantichtop20.md  slippage_minimization_formulas.tex  trading-analysis-process.md
docs/research/: trading-process-improvement.md
scripts/: analyze_top100.py  backtest_matrix.py  backtest_top_picks.py  display_results.py  dotusdt_analysis.py  dotusdt_full_mcp_analysis.py  fh_analysis.py  market_scan.py  monitor.py  monitor_lite.py  multi_tf_analysis.py  quant_screener.py  self_learn.py  self_learn_v2.py  short_scanner.py  top100_analysis.py  top100_full_scan.py  trading_recommendation.py  upgrade-core.sh  verify_indicators.py  xagusdt_analysis.py  xagusdt_summary.py
tasks/: todo.md  todo_top100.md
