[workspace]
members = [
    "bonbo-extend",
    "bonbo-extend-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["BonBo Team"]
license = "MIT"

[workspace.dependencies]
# Async
 tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# TOML config
toml = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Async trait
async-trait = "0.1"
