[package]
name = "bonbo-binance-futures"
version.workspace = true
edition.workspace = true
description = "Binance USDⓈ-M Futures API client (REST + WebSocket)"
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { workspace = true }
dotenvy = "0.15"
rust_decimal_macros = "1"
