[package]
name = "bonbo-extend"
version.workspace = true
edition.workspace = true
description = "BonBo Plugin Framework — extensible tool & service system for BonBo AI Agent"
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

# MCP protocol types
serde_repr = "0.1"

# UUID for unique IDs
uuid = { version = "1", features = ["v4"] }

# Directories
dirs = "5"

# HTTP client (for market data tools)
reqwest = { version = "0.12", features = ["json"] }

# Quantitative analysis crates
bonbo-ta = { path = "../bonbo-ta" }
bonbo-data = { path = "../bonbo-data" }
bonbo-quant = { path = "../bonbo-quant" }
bonbo-sentinel = { path = "../bonbo-sentinel" }
bonbo-risk = { path = "../bonbo-risk" }
bonbo-journal = { path = "../bonbo-journal" }
bonbo-regime = { path = "../bonbo-regime" }
bonbo-learning = { path = "../bonbo-learning" }
bonbo-validation = { path = "../bonbo-validation" }
bonbo-scanner = { path = "../bonbo-scanner" }
bonbo-binance-futures = { path = "../bonbo-binance-futures" }
bonbo-executor = { path = "../bonbo-executor" }

# Decimal for trading math
rust_decimal = { workspace = true }
rust_decimal_macros = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
