[package]
name = "bonbo-funding"
version.workspace = true
edition.workspace = true
description = "Funding rate tracker and alert system for Binance Futures"
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
bonbo-binance-futures = { path = "../bonbo-binance-futures" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
rust_decimal_macros = "1"
