[package]
name = "bonbo-learning"
version.workspace = true
edition.workspace = true

[dependencies]
bonbo-journal = { path = "../bonbo-journal" }
bonbo-regime = { path = "../bonbo-regime" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
