[package]
name = "bonbo-risk"
version.workspace = true
edition.workspace = true
description = "BonBo Risk Management — circuit breakers, position sizing, CVaR"
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
