[package]
name = "bonbo-risk"
version.workspace = true
edition.workspace = true
description = "BonBo Risk Management — circuit breakers, position sizing, CVaR"
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rust_decimal_macros = { workspace = true }

[[bench]]
name = "risk_metrics"
harness = false
