[package]
name = "bonbo-scanner"
version.workspace = true
edition.workspace = true

[dependencies]
bonbo-journal = { path = "../bonbo-journal" }
bonbo-regime = { path = "../bonbo-regime" }
bonbo-learning = { path = "../bonbo-learning" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
