[package]
name = "bonbo-sentinel"
version.workspace = true
edition.workspace = true
description = "BonBo Sentinel — on-chain analytics and sentiment analysis"
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
