[package]
name = "bonbo-ta"
version.workspace = true
edition.workspace = true
description = "BonBo Technical Analysis Engine — incremental O(1) indicators for crypto"
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# For cross-validation tests against known TA-Lib values
approx = "0.5"
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "indicators"
harness = false
